@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -43,7 +42,7 @@ public class UserService {
     	List<User> users = userRepository.findAll();
         return users.stream()
                 .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDTO updateUser(UUID id, UpdateUserDTO dto) {
